--- a/application/plugins/if.main/changelog
+++ b/application/plugins/if.main/changelog
@@ -1,3 +1,6 @@
+1.2.0
+- Ahora VIEWPORT y IS_MOBILE se actualizan de inmediato para mejorar el soporte móvil en dispositivos que pueden cambiar entre estados móvil/no-móvil de inmediato (p.e. tabletas que se giran en modo landscape y portrait).
+- Añadido evento customizado de jQuery "resizeEnd".
 1.1.0
 - Movido IF_MAIN a su propio puglin
 - Reemplazado DATEPICKER_FORMAT por DATEPICKER_CONFIG
