--- a/application/plugins/if.masterdetail/changelog
+++ b/application/plugins/if.masterdetail/changelog
@@ -1,11 +1,12 @@
-1.0.0
-- Inicial
+1.2.0
+- Soporte multi-idiomas, por defecto estará en inglés. Para establecer otro idioma se debe incluir MANUALMENTE alguno de los paquetes l10n.xx.js ANTES de llamar init().
+- Mejorada la experiencia movil permitiendo que el detalle esté inicialmente invisible y sólo se muestre a pantalla completa al seleccionar un elemento de la MT 
+- Auto-detección en tiempo real de la resolución del dispositivo y cambio automático entre modos móvil y no-móvil
+- Añadido método hideDetail()
+- Añadido método detailClosed()
 1.1.0
 - Añadido soporte para Data Formatters de Bootgrid
 - Añadido método save()
 - Añadido método detailLoaded()
-- Localizacion a español de Bootgrid
-1.2.0
-- Soporte multi-idiomas, por defecto estará en inglés. Para establecer otro idioma se debe incluir MANUALMENTE alguno de los paquetes l10n.xx.js ANTES de llamar init().
-- Mejorada la experiencia movil permitiendo que el detalle esté inicialmente invisible y sólo se muestre a pantalla completa al seleccionar un elemento de la MT 
-- Añadido método hideDetail()
+1.0.0
+- Inicial
