--- a/application/plugins/if.modal/changelog
+++ b/application/plugins/if.modal/changelog
@@ -1,3 +1,5 @@
+2.1.0
+- Añadidas opciones para cargar contenido a traves de AJAX
 2.0.0
 - Reescrito con los principios de Google Material Design
 1.1.0
