--- a/application/plugins/if.masterdetail/changelog
+++ b/application/plugins/if.masterdetail/changelog
@@ -1,3 +1,5 @@
+1.2.3
+- Añadido reloadDetail()
 1.2.2
 - Bugfix: detalle se estaba abriendo cuando la resolucion era exactamente 768px
 - Bugfix: disparaba _mtSelected() cuando se ordenaba por columna
