--- a/application/plugins/if.main/changelog
+++ b/application/plugins/if.main/changelog
@@ -1,3 +1,8 @@
+1.3.0
+- Bugfix: al abrir varios layers no cerraba más de uno
+- Bugfix: parte del layer quedaba fuera del viewport
+- Añadido el header a los layers
+- Layer ahora carga su contenido DESPUES de la animación
 1.2.0
 - Ahora VIEWPORT y IS_MOBILE se actualizan de inmediato para mejorar el soporte móvil en dispositivos que pueden cambiar entre estados móvil/no-móvil de inmediato (p.e. tabletas que se giran en modo landscape y portrait).
 - Añadido evento customizado de jQuery "resizeEnd".
