--- a/application/plugins/if.layer/changelog
+++ b/application/plugins/if.layer/changelog
@@ -1,5 +1,15 @@
+1.3.1
+- Removido callback por parámetro al cerrar layer (causaba algunos bugs)
+- Añadido eventos beforeClose y afterClose (suplanta el callback removido)
+1.3.0
+- Bugfix: al abrir varios layers no cerraba más de uno
+- Bugfix: parte del layer quedaba fuera del viewport
+- Añadido el header a los layers
+- Layer ahora carga su contenido DESPUES de la animación
+1.2.0
+- Ahora VIEWPORT y IS_MOBILE se actualizan de inmediato para mejorar el soporte móvil en dispositivos que pueden cambiar entre estados móvil/no-móvil de inmediato (p.e. tabletas que se giran en modo landscape y portrait).
+- Añadido evento customizado de jQuery "resizeEnd".
 1.1.0
-- Bugfix: contenedores con scroll no renderizaban correctamente el layer
-- Añadido jquery.mutation para esuchar cambios al contenedor
-1.0.0
-- Inicial
+- Movido IF_MAIN a su propio puglin
+- Reemplazado DATEPICKER_FORMAT por DATEPICKER_CONFIG
+- Añadidos VIEWPORT y IS_MOBILE. Se establecen automaticamente. IS_MOBILE es true si la pantalla del usuario < 768px
