--- a/application/plugins/if.html5constraints/changelog
+++ b/application/plugins/if.html5constraints/changelog
@@ -1,6 +1,5 @@
 2.0.1
-- Bugfix, la comprobación se estaba aplicando a input[type=hidden],
-esto fue removido
+- Bugfix, la comprobación se estaba aplicando a input[type=hidden], esto fue removido
 2.0.0
 - Cambiado el nombre del plugin a if.html5constraints
 1.0.0
