--- a/application/plugins/if.main/changelog
+++ b/application/plugins/if.main/changelog
@@ -1,8 +1,6 @@
 1.3.0
-- Bugfix: al abrir varios layers no cerraba más de uno
-- Bugfix: parte del layer quedaba fuera del viewport
-- Añadido el header a los layers
-- Layer ahora carga su contenido DESPUES de la animación
+- Mejora de rendimiento: VIEWPORT y IS_MOBILE se actualizan ahora con resizeEnd
+- Refractorizacion y pulitura de código, eliminación de código muerto, eliminación de código que no debería ir en IF_MAIN (como validación de formas, debería ser un plugin aparte)
 1.2.0
 - Ahora VIEWPORT y IS_MOBILE se actualizan de inmediato para mejorar el soporte móvil en dispositivos que pueden cambiar entre estados móvil/no-móvil de inmediato (p.e. tabletas que se giran en modo landscape y portrait).
 - Añadido evento customizado de jQuery "resizeEnd".
