--- a/application/plugins/if.layer/changelog
+++ b/application/plugins/if.layer/changelog
@@ -6,10 +6,8 @@
 - Bugfix: parte del layer quedaba fuera del viewport
 - Añadido el header a los layers
 - Layer ahora carga su contenido DESPUES de la animación
-1.2.0
-- Ahora VIEWPORT y IS_MOBILE se actualizan de inmediato para mejorar el soporte móvil en dispositivos que pueden cambiar entre estados móvil/no-móvil de inmediato (p.e. tabletas que se giran en modo landscape y portrait).
-- Añadido evento customizado de jQuery "resizeEnd".
 1.1.0
-- Movido IF_MAIN a su propio puglin
-- Reemplazado DATEPICKER_FORMAT por DATEPICKER_CONFIG
-- Añadidos VIEWPORT y IS_MOBILE. Se establecen automaticamente. IS_MOBILE es true si la pantalla del usuario < 768px
+- Bugfix: contenedores con scroll no renderizaban correctamente el layer
+- Añadido jquery.mutation para esuchar cambios al contenedor
+1.0.0
+- Inicial
