--- a/application/plugins/if.layer/changelog
+++ b/application/plugins/if.layer/changelog
@@ -1,3 +1,7 @@
+1.3.2
+- Añadido onLimit
+- Pequeños ajustes varios
+- Adaptación de documentación para JSDOCS
 1.3.1
 - Removido callback por parámetro al cerrar layer (causaba algunos bugs)
 - Añadido eventos beforeClose y afterClose (suplanta el callback removido)
