--- a/application/plugins/if.layer/changelog
+++ b/application/plugins/if.layer/changelog
@@ -1,3 +1,7 @@
+1.4.0
+- Cambiada la flecha de cierre a una al estilo Material Designs (MD)
+- El contenido interno del layer ya no aparece/desaparece repentinamente al abrir/cerrar el layer
+- Aplicado easing a la animación de apertura/cierre
 1.3.2
 - Añadido onLimit
 - Pequeños ajustes varios
