--- a/application/plugins/if.upload/changelog
+++ b/application/plugins/if.upload/changelog
@@ -1,3 +1,6 @@
+3.2.0
+- Añadida característica para copiar una imagen automaticamente con dimensiones y calidad distinta.
+- Optimizaciones pequeñas en IF_UPLOAD controller
 3.1.1
 - Añadido soporte para tamaño máximo de imagen ($this->CONFIG->IMAGE_SIZE_MAX)
 - Creadas las constantes de error IF_UPLOAD.ERROR_NONE, IF_UPLOAD.ERROR_FILE_NOT_CREATED, IF_UPLOAD.ERROR_IMAGE_WRONG_SIZE, usar estas constantes para comparar la respuesta del servidor al subir ficheros.
