--- a/application/plugins/if.avatar/changelog
+++ b/application/plugins/if.avatar/changelog
@@ -1,3 +1,6 @@
+2.0.0
+- Añadido opción de cropping
+- Refactorización y reescritura del controlador para manejar ahora en un mismo sitio todas las formas de subida (webcam, upload, con o sin crop).
 1.2.0
 - Adaptaciones generales para IF.
 - Añadido controllers/IF_Avatar.php
