--- a/application/plugins/if.avatar/changelog
+++ b/application/plugins/if.avatar/changelog
@@ -1,3 +1,5 @@
+2.0.1
+- Bugfixing para pantallas pequeñas
 2.0.0
 - Añadido opción de cropping
 - Refactorización y reescritura del controlador para manejar ahora en un mismo sitio todas las formas de subida (webcam, upload, con o sin crop).
