--- a/application/plugins/if.upload/changelog
+++ b/application/plugins/if.upload/changelog
@@ -1,3 +1,5 @@
+3.2.1
+- Reemplazadas las constantes deprecadas
 3.2.0
 - Añadida característica para copiar una imagen automaticamente con dimensiones y calidad distinta.
 - Optimizaciones pequeñas en IF_UPLOAD controller
