--- a/application/plugins/if.layer/changelog
+++ b/application/plugins/if.layer/changelog
@@ -1,3 +1,5 @@
+1.4.2
+- Bugfix: algunas veces en maestros detalles no se reactivaba overflow de parent container al seleccionar otro elemento en la MT
 1.4.1
 - Eliminado title del botón de cierre
 - Refractorización de código
